# DocuMind

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 160d920e816a_initial_tables.py
src/api/auth/: __init__.py
src/api/chat/: __init__.py
src/api/document/: __init__.py
src/api/evaluation/: __init__.py
src/api/user/: __init__.py
src/database/: __init__.py
src/model/: __init__.py
src/repo/: document_repo.py  user_repo.py
src/schema/: auth_schema.py  chat_schema.py  evaluation_schema.py  user_schema.py
src/security/: dependencies.py  o_auth.py
src/services/: auth_service.py  chat_service.py  document_service.py  ragas_service.py  user_service.py  vectordb_service.py
src/setting/: config.py
src/utils/: document_processor.py  file_util.py  hash_util.py  logger.py
